...
                                            <constraint firstAttribute="bottom" secondItem="n9i-AZ-OQY" secondAttribute="bottom" id="MSH-dV-hBW"/>
                                            <constraint firstItem="n9i-AZ-OQY" firstAttribute="leading" secondItem="7cn-8g-wMc" secondAttribute="leading" id="YfN-Ls-SbA"/>
                                            <constraint firstAttribute="trailing" secondItem="n9i-AZ-OQY" secondAttribute="trailing" id="f2f-Vq-mMy"/>
                                            <constraint firstAttribute="height" constant="20" id="pT7-9H-vb2"/>
                                        </constraints>
                                    </view>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Qe-Wq-XIf">
                                        <rect key="frame" x="77" y="221" width="260" height="34"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="260" id="Ldt-ia-dL1"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                                        <connections>
                                            <outlet property="delegate" destination="7q3-fl-Mn3" id="wHi-TF-GIF"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dtH-AE-VSu">
                                        <rect key="frame" x="77" y="270" width="260" height="34"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="260" id="1a9-HE-EDp"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" secureTextEntry="YES"/>
                                        <connections>
                                            <outlet property="delegate" destination="7q3-fl-Mn3" id="UPY-hk-LFP"/>
                                        </connections>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pgs-2G-6aS">
                                        <rect key="frame" x="163" y="324" width="88" height="30"/>
                                        <state key="normal" title="Authenticate"/>
                                        <connections>
                                            <action selector="authenticate" destination="7q3-fl-Mn3" eventType="touchUpInside" id="FZl-xf-ANx"/>
                                        </connections>
                                    </button>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favicon" translatesAutoresizingMaskIntoConstraints="NO" id="KDr-Ms-VgO">
                                        <rect key="frame" x="143" y="384" width="128" height="128"/>
...
